from NMM.base.Part.Part import Part


class DataStructure(Part):
    pass
