from NMM.base.Element.Element import Element


class PreprocessElement(Element):
    pass
