@startuml
'https://plantuml.com/class-diagram

interface NmmObjectBaseInterface{
}
abstract class NmmObjectBase{
}
interface CompositeObjectInterface{
}
abstract class CompositeObject{
}
abstract class Part{
}
class FilePath
class DataStructure

NmmObjectBase <|.. NmmObjectBaseInterface
CompositeObject <|.. CompositeObjectInterface
CompositeObject <|-- NmmObjectBase
Part <|-- CompositeObject
FilePath <|-- Part
DataStructure <|-- Part

interface PropertyInterface{
}
abstract class Property{
}
class Path
class VtkGrid


Property <|-- NmmObjectBase
Property <|.. PropertyInterface
Path <|-- Property
FilePath *-- Path
VtkGrid <|-- Property
DataStructure *-- VtkGrid

abstract class Model{
}
class PreprocessModel{
}
Model <|-- CompositeObject
PreprocessModel <|- Model
PreprocessModel o-- FilePath
PreprocessModel o-- DataStructure

class NmmDatabase{
}
class DatabaseTable{
}
DatabaseTable <|-- Property
NmmDatabase <|-- Part
NmmDatabase *-- DatabaseTable
PreprocessModel o-- NmmDatabase

abstract class EntityList{
}
class ElementList{
}
abstract class Element{
}
class PreprocessElement{
}
class Relationship{
}

ElementList <|-- EntityList
EntityList <|-- Part
PreprocessElement <|-- Element
Element <|-- Property
Relationship <|-- Property

PreprocessModel o-- ElementList
ElementList *-- PreprocessElement
PreprocessElement *-- Relationship

class Cover{
}
class CoverList{
}
Cover <|-- Element
CoverList <|-- EntityList
CoverList *-- Cover
Cover *-- Relationship
PreprocessModel o-- CoverList

Cover <--> PreprocessElement

@enduml